@@ -1,4 +1,4 @@
-<?php include(dirname(__FILE__).'/header.php'); ?>
+<?php include(__DIR__.'/header.php'); ?>
 
 	<main class="main">
 
@@ -67,7 +67,7 @@
 
 				</div>
 
-				<?php include(dirname(__FILE__).'/sidebar.php'); ?>
+				<?php include(__DIR__.'/sidebar.php'); ?>
 
 			</div>
 
@@ -75,4 +75,4 @@
 
 	</main>
 
-<?php include(dirname(__FILE__).'/footer.php'); ?>
+<?php include(__DIR__.'/footer.php'); ?>
