@@ -8,6 +8,8 @@
 [+] Gestionnaire de médias : affichage du nombre maximal de fichiers par envoi
 [+] Thème par défaut : entête de page fixe (contribution bazooka07)
 [+] Tri alphabétique inversé des articles et catégories  (contribution bazooka07)
+[+] Gestionnaire de médias : affichage nombre maxi de fichiers par envoi
+
 [+] #225 Ajout id à la balise <body> de la page auth.php
 [+] #230 Image d'accroche dans le premier article créé à l'installation
 [+] #239 Test et affichage accès en écriture du dossier racine pour les thèmes
@@ -15,6 +17,7 @@
 [+] #265 Affichage des archives sur une périodes glissantes de 12 mois (contribution bazooka07)
 [+] #266 Tri des pages statiques, catégories et plugins par drag n drop (contribution bazooka07)
 [+] #269 Ajout scope[admin|site] dans les fichiers infos.xml des plugins pour charger un plugin uniquement coté admin, site ou les 2 (contribution bazooka07)
+[+] #305 Remplacement dirname(__FILE__) par __DIR__ dans l'admin et le thème par défaut (contribution bazzoka07)
 FIX Suppression fichier plugin update impossible (droit fichier)
 FIX Chevauchement des menus de l'administration avec un facteur de zoom > 100%
 FIX Administration : mauvais affichage des caractères spéciaux dans le nom de l'auteur d'un commentaire (contribution bazooka07)
